<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calcgui.CalcGUI" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investment_amount"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/displayFV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:ems="10"
        android:inputType="text"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/calculateFv"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/fv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/displayFV"
        android:layout_alignLeft="@+id/annualInterestRate"
        android:text="@string/future_value"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/inputInvestmentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignTop="@+id/textView1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/Years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/inputInvestmentAmount"
        android:layout_marginTop="16dp"
        android:text="@string/years"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/annualInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/displayFV"
        android:layout_alignLeft="@+id/Years"
        android:layout_marginBottom="26dp"
        android:text="@string/annual_interest_rate" />

    <EditText
        android:id="@+id/inputInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/displayFV"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/annualInterestRate"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputInvestmentAmount"
        android:layout_alignTop="@+id/Years"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>